<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KinderKingdom</string>
    <string name="mylist">goooooood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="underlined_text"><u>forget password?</u></string>
    <string name="underlined_textl"><u>SignUp</u></string>
    <string-array name="myarray">
        <item>+962</item>
        <item>+963</item>
        <item>+970</item>
        <item>+966</item>
        <item>+971</item>
    </string-array>
    <string name="title_activity_gp">gp</string>

    <!-- General -->
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="enable_voice">Enable Voice</string>
    <!-- Example Titles -->
    <string name="students">Students</string>
    <string name="kinder">kinder</string>
    <string name="Kingdom">Kingdom</string>
    <string name="managers">Managers</string>
    <string name="teachers">Teachers</string>
    <string name="drivers">Drivers</string>
    <string name="ClassSchedule">Class Schedule</string>
    <string name="Homework">Homework</string>
    <string name="Interaction">Interaction</string>
    <string name="ExamSchedule">Exam Schedule</string>
    <string name="Marks">Marks</string>
    <string name="Findyouraccount">Find your account</string>
    <string name="Enteryourphonenumber">Enter your phone number</string>
    <string name="Phonenumber">Phone number</string>
    <string name="Continue">Continue</string>
    <string name="Searchbyemailinstead">Search by email instead</string>
    <string name="Enteryouremailaddress">Enter your email address</string>
    <string name="Searchbyphonenumberinstead">Search by phone number instead</string>
    <string name="KinderKingdomAllRightsReserved">©2026 KinderKingdom.All Rights Reserved.</string>
    <string name="WelcomeToKinderKingdom">Welcome To Kinder Kingdom</string>
    <string name="helpers">Helpers</string>
    <string name="security">Security</string>
    <string name="BusTour">Bus Tour</string>
    <string name="Messages">Messages</string>
    <string name="FeedbackNotes">Feedback &amp; Notes</string>
    <string name="MyPage">My Page</string>
    <string name="StudentsInformation">Student’s Information</string>
    <string name="TeachersInformation">Teacher’s Information</string>
    <string name="AcademicInformationOfStudents">Academic Information Of Students</string>
    <string name="AcademicInformation">Academic Information</string>
    <string name="personalinformation">Personal Information</string>
    <string name="DailyMenu"> Daily Menu</string>
    <string name="RegistrationPayment"> Registration &amp; Payment</string>
    <string name="MyInformation"> My  Information</string>
    <string name="AttendanceAbsences"> Attendance &amp; Absences</string>
    <string name="Work">Work</string>
    <string name="Contracts">Contracts</string>
    <string name="Information">Information</string>
    <string name="MyChild">My Child</string>
    <string name="creating">Creating bright futures</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="enteryourpassword">Enter Your Password</string>
    <string name="enteryourphone">Enter Your Phone</string>
    <string name="rememberme">Remember Me</string>
    <string name="Donthaveanaccount">Don’t have an account ?</string>
    <string name="title_activity_bustour">bustour</string>

</resources>