<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".forgetpassword1">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="372dp"
        android:layout_height="50dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/Phonenumber"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="@font/kiteone"
        android:text="@string/Findyouraccount"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="40dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/kiteone"
        android:text="@string/Enteryourphonenumber"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/kiteone"
        android:onClick="searchbyemail"
        android:text="@string/Searchbyemailinstead"
        android:textColor="@color/blue"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="323dp"
        android:layout_height="57dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/kiteone"
        android:onClick="continuee"
        android:text="@string/Continue"
        android:textColor="@color/blue"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settingView"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settingicon" />

    <ImageView
        android:id="@+id/bellView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bellicon" />


</androidx.constraintlayout.widget.ConstraintLayout>