<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="91dp"
        android:layout_height="29dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="456dp"
        android:fontFamily="@font/kiteone"
        android:text="@string/signup"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="239dp"
        android:layout_height="189dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="496dp"
        android:fontFamily="@font/kiteone"
        android:text="@string/rememberme"
        android:onClick="RememberMe"
        android:textColor="@color/blue"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="23dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/kiteone"
        android:text="@string/underlined_text"
        android:textColor="@color/blue"
        android:textSize="13sp"
        android:onClick="forget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterPasswordss" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="324dp"
        android:src="@drawable/emailicon"
        app:layout_constraintEnd_toEndOf="@+id/EnterEmailss"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="295dp"
        android:layout_height="61dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/kiteone"
        android:textSize="15sp"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterPasswordss" />

    <EditText
        android:id="@+id/EnterPasswordss"
        android:layout_width="316dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#80CCCCCC"
        android:hint="@string/enteryourpassword"
        android:singleLine="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterEmailss" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="320dp"
        android:src="@drawable/passwordd"
        app:layout_constraintEnd_toEndOf="@+id/EnterPasswordss"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <EditText
        android:id="@+id/EnterEmailss"
        android:layout_width="316dp"
        android:layout_height="57dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#80CCCCCC"
        android:hint="@string/enteryouremail"
        android:singleLine="true"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settingView"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settingicon" />


</androidx.constraintlayout.widget.ConstraintLayout>