<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".page1"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="12dp">

    <Button
        android:id="@+id/button"
        android:layout_width="282dp"
        android:layout_height="69dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/kiteone"
        android:onClick="SignUp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="288dp"
        android:layout_height="125dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="68dp"
        android:fontFamily="@font/kiteone"
        android:gravity="center"
        android:text="@string/creating"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="282dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/kiteone"
        android:onClick="LogIn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="236dp"
        android:layout_height="260dp"
        android:layout_marginStart="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/stupage" />

    <ImageView
        android:onClick="setting"
        android:id="@+id/settingView"
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settingicon" />




</androidx.constraintlayout.widget.ConstraintLayout>